--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,31 @@
-.App {
-  text-align: center;
+th{
+  @apply text-center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+th{
+  font-size: large;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+td{
+  @apply text-center;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+td{
+  font-size: medium;
 }
 
-.App-link {
-  color: #61dafb;
+.deleteIconRed{
+  fill :red;
+ height: 20px;
+ width: 20px; 
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#editBtn{
+  fill: white(135, 238, 247);
+  height: 20px;
+ width: 20px; 
+}
+
+th{
+  @apply text-teal-700
 }
